--- a/README
+++ b/README
@@ -11,7 +11,7 @@ sudo make install
 
 ### read csv
 ```scheme
-(use-modules (csv))
+(use-modules (csv csv))
 (define my-csv-reader (make-csv-reader #:\,))
 (call-with-input-file "file.csv" my-csv-reader)
 ```
